<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sheep Herder</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_game_settings_panel">GameSettingsPanel</string>
    <string name="title_activity_sheep_herder">SheepHerderActivity</string>
    <string name="back">Back</string>
    <string name="startGame">StartGame</string>
    <string name="settings">Options</string>
	<string name="sheepHerder">Sheep Herder</string>
	<string name="quit">Quit</string>
	<string name="title">Sheep Herder</string>
	<string name="dogSpeed">Dog Speed</string>
	<string name="sheepSpeed">Sheep Speed</string>
	<string name="foxSpeed">Fox Speed</string>
	<string name="numSheeps">Number of Sheep</string>
	<string name="numFoxes">Number of Foxes</string>
	<string name="numOfSheep"># of Sheep</string>
	<string name="numOfFoxes"># of Foxes</string>
	<string name="maxSpeed">Max</string>
	<string name="minSpeed">Min</string>
	<string name="start">Start</string>
	<string name="game_over">Game Over!</string>
	<string name="times_up">Time\'s Up!</string>
	<string name="play_again">Play Again</string>
	<string name="score">Score</string>
	<string name="your_score">Your Score:</string>
	<string name="highest_score">Highest Score:</string>
	<string name="message">"Tap the screen to move the dog and keep the sheep away from the foxes!"</string>
	<string name="main_menu_prompt">Return to Main Menu</string>
	<string name="five">five</string>
	<string name="eight">eight</string>
	<string name="ten">ten</string>
	<string name="twelve">twelve</string>
	<string name="fifteen">fifteen</string>
	<string name="twenty">twenty</string>
</resources>
